chore: replace Collections#emptySet with Set#of to align with best practices